# spgym-experiments

./: README.md
dreamer/dreamerv3/: Dockerfile  configs.yaml  main.py
dreamer/embodied/run/: train.py
dreamer/scripts/: no_decoder.sh  scale.sh
dreamerv3/: .dockerignore  .gitignore  d_find_limit.sh
dreamerv3/dreamerv3/: Dockerfile  configs.yaml  requirements.txt
dreamerv3/embodied/envs/: sldp.py
dreamerv3/embodied/run/: train.py
dreamerv3/scripts/: diffusiondb.sh  no_decoder.sh  scale.sh  standardize_metrics.py  w4.sh
ppo/: Dockerfile  README.md  ppo.py  requirements.txt
ppo/scripts/: pretrained_encoder_diff_pool.sh  pretrained_encoder_same_pool.sh  scale.sh
ppo_sac/: Dockerfile  aug_test.ipynb  dmc_test.ipynb  entrypoint.sh  entrypoint_dataset.sh  models.py  ood_eval.ipynb  ppo.py  representation.py  requirements.txt  requirements_leanrl.txt  requirements_spgym.txt  sac_dmc.sh  sac_repr.sh  spgym_test.ipynb  train_sac.py  utils.py
ppo_sac/algorithms/: base_sac.py  sac_discrete.py
ppo_sac/scripts/: standardize_metrics.py
ppo_sac/scripts/experiments/: ppo.sh  ppo_pretrained_id.sh  ppo_pretrained_ood.sh  sac.sh  sac_search_aug.sh  sac_w4.sh
ppo_sac/sweeps/: ppo.yaml  sac.yaml  sac_con.yaml  sac_con_aug.yaml  sac_dbc.yaml  sac_rec.yaml  sac_recv.yaml  sac_spr.yaml
spgym/: README.md  requirements.txt  setup.cfg
spgym/sliding_puzzles/: __init__.py  env.py  utils.py  wrappers.py
spgym/tests/: test_wrappers.py
