[metadata]
name = sliding-puzzles
version = 0.0.1
author = Bryan L M Oliveira
author_email = bryanlmoliveira@gmail.com
description = A richer sliding blocks puzzle RL environment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bryanoliveira/sliding-image-puzzle-env
project_urls =
    Bug Tracker = https://github.com/bryanoliveira/sliding-image-puzzle-env/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:

# ALERT keep in sync with requirements.txt!
install_requires =
    gymnasium<0.30
    matplotlib<4

python_requires = >=3.8

[options.packages.find]
where = .
